--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Yeseva+One&display=swap" rel="stylesheet">
     <title>Athena</title>
   </head>
-  <body>
+  <body style="background: #FAFFFD;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
